feat：优化webpack配置，代码压缩等

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,3 +10,8 @@ h3 {
   background: url('/src/images/google.png');
   background-color: black;
 }
+.box_two {
+  width: 500px;
+  height: 500px;
+  background: url('../images/daitu.jpeg');
+}
